--- a/02-ansible/01-ansible/provisionar.yml
+++ b/02-ansible/01-ansible/provisionar.yml
@@ -53,6 +53,7 @@
         src: "/tmp/wordpress.tar.gz"
         dest: "/var/www"
         remote_src: yes
+      become: yes
 
     - name: "Copia arquivo WP"
       copy:
@@ -104,16 +105,16 @@
     #     password: root
     #     priv: "*.*:ALL,GRANT"
 
-    # - name: "Cria o banco de dados MySQL"
-    #   mysql_db:
-    #     name: banco_wordpress
-    #     login_user: root
-    #     login_password: root
-    #     state: present
+    - name: "Cria o banco de dados MySQL"
+      mysql_db:
+        name: banco_wordpress
+        login_user: root
+        login_password: root
+        state: present
 
-    # - shell: cat /var/www/wordpress/wp-config.php
-    #   register: ps
-    # - debug:
-    #     msg: " '{{ ps.stdout_lines }}' "
+    - shell: cat /var/www/wordpress/wp-config.php
+      register: ps
+    - debug:
+        msg: " '{{ ps.stdout_lines }}' "
 
     
