--- a/07-kubernetes/00-cluster-single-master/0-k8s/1-ansible/provisionar.yml
+++ b/07-kubernetes/00-cluster-single-master/0-k8s/1-ansible/provisionar.yml
@@ -1,5 +1,34 @@
 # ### dar nome para o master
 # ssh -i ~/Desktop/devops/treinamentoItau ubuntu@ec2-54-226-188-130.compute-1.amazonaws.com
+# colocar o comando abaixo antes de executar para não pedir resposta do ansible
+# ANSIBLE_HOST_KEY_CHECKING=False
+- hosts: 
+  - ec2-k8s-master
+  tasks:
+     - name: "mudar nome master"
+       become: true
+       shell: hostname k8s-master && echo "k8s-master" > /etc/hostname
+
+- hosts: 
+  - ec2-k8s-worker1
+  tasks:
+     - name: "mudar nome ec2-k8s-worker1"
+       become: true
+       shell: hostname ec2-k8s-worker1 && echo "k8s-worker1" > /etc/hostname
+
+- hosts: 
+  - ec2-k8s-worker2
+  tasks:
+     - name: "mudar nome ec2-k8s-worker2"
+       become: true
+       shell: hostname ec2-k8s-worker2 && echo "k8s-worker2" > /etc/hostname
+
+- hosts: 
+  - ec2-k8s-worker3
+  tasks:
+     - name: "mudar nome ec2-k8s-worker3"
+       become: true
+       shell: hostname ec2-k8s-worker3 && echo "k8s-worker3" > /etc/hostname
 
 # sudo su -
 # hostname k8s-master 
@@ -7,17 +36,17 @@
 # bash
 
 # sudo su -
-# hostname k8s-node-0
+# hostname k8s-node-1
 # echo "k8s-node-0" > /etc/hostname
 # bash
 
 # sudo su -
-# hostname k8s-node-1
+# hostname k8s-node-2
 # echo "k8s-node-1" > /etc/hostname
 # bash
 
 # sudo su -
-# hostname k8s-node-2
+# hostname k8s-node-3
 # echo "k8s-node-2" > /etc/hostname
 # bash
 
