commit dia 19 multimaster pronto

--- a/07-kubernetes/03-clusterip/clusterip-svc-nodejs.yml
+++ b/07-kubernetes/03-clusterip/clusterip-svc-nodejs.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: label-imersao-nodejs
+    app: matheustreviz-nodejs
   ports:
     - port: 3000
       targetPort: 3000
