--- a/07-kubernetes/01-pod/pod-nodejs.yml
+++ b/07-kubernetes/01-pod/pod-nodejs.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: didox-nginx
+  name: matheustreviz-nodejs
   labels:
-    app: didox-nginx
+    app: matheustreviz-nodejs
 spec:
   containers:
-    - name: container-pod-nginx
-      image: nginx:latest
+    - name: container-pod-nodejs
+      image: matheustreviz/validador-cpf-java-turma-devops
       ports:
-        - containerPort: 80
+        - containerPort: 3000
 
 # kubectl apply -f pod-nginx.yml
 # kubectl describe -f pod-nginx.yml
