--- a/08-jenkins/deploy-infra-img-java-app/jenkinsfile
+++ b/08-jenkins/deploy-infra-img-java-app/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Clone repo') {
             steps {
-                git url: 'https://github.com/Didox/treinamento-devops', branch: 'main'
+                git url: 'https://github.com/matreviz/treinamento-devops.git', branch: 'main'
             }
         }
         stage('Build EC2') {
